# kcmlaptop

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  acconfig.h  acinclude.m4  aclocal.m4  config.h.bot  config.h.in  configure  configure.in  kcmlaptop.lsm  kcmlaptop.spec  ltconfig
laptop/: CMakeLists.txt  Makefile.am  Makefile.in  apm.h  apmlib.c  battery.cpp  battery.h  daemon.cpp  daemon.h  kbattery.cpp  kbattery.h  laptop_battery.xpm  laptop_charge.xpm  laptop_nobattery.xpm  laptop_nocharge.xpm  laptop_settings.xpm  main.cpp  mini-laptop_battery.xpm  mini-laptop_charge.xpm  mini-laptop_nobattery.xpm  mini-laptop_nocharge.xpm  mini-laptop_settings.xpm  mini-pcmcia.xpm  mini-power.xpm  notify.cpp  notify.h  pcmcia.cpp  pcmcia.h  pcmcia.xpm  pm.h  pmlib.c  power.cpp  power.h  power.xpm  version.h  warning.cpp  warning.h
laptop/applnk/: Makefile.am  Makefile.in
laptop/applnk/Settings/: Makefile.am  Makefile.in
laptop/applnk/Settings/Laptop/: .directory  Makefile.am  Makefile.in  battery.kdelnk  bwarning.kdelnk  cwarning.kdelnk  pcmcia.kdelnk  power.kdelnk
laptop/doc/: Makefile.in
laptop/doc/en/: Makefile.am  Makefile.in  laptop-1.html  laptop-2.html  laptop-3.html  laptop-4.html  laptop-5.html  laptop-6.html  laptop-7.html  laptop-8.html  laptop.html
